<resources>
    <string name="app_name">Amara</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo electronico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">El correo electronico es invalido</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="title_activity_pantalla_inicial">PantallaInicialActivity</string>

    <string name="title_home">Inicio</string>
    <string name="title_mapa">Mapa</string>
    <string name="title_unidades">Unidades</string>
    <string name="title_perfil">Mi perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <string name="menu_cerrar_sesion">Cerrar Sesión</string>
    <string name="menu_cofiguraciones">Configuraciones</string>
    <string name="title_activity_mapa">MapaActivity</string>
    <string name="title_activity_incidencia">IncidenciaActivity</string>
    <string name="title_activity_resultado">ResultadoActivity</string>
    <string name="empezar_viaje">Empezar viaje</string>
    <string name="detener_viaje">Detener viaje</string>
    <string name="title_activity_destino">DestinoActivity</string>
</resources>
